Fixed alignment of milkdown editor in full screen

--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -66,7 +66,7 @@
     position: fixed;
     width: 100%;
     max-width: 100vw;
-    left: 30%;
+    left: 35%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -289,8 +289,8 @@ label {
     #editor .milkdown .editor {
         padding: 0px 0px;
         position: fixed;
-        width: 71.2%;
-        left: 64%;
+        width: 70%;
+        margin-left: 350px;
         top: 50%;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
